# minicli

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: simple.cpp
include/: app.hpp  checker.hpp  command.hpp  minicli.hpp  option.hpp  util.hpp
src/: app.cpp  checker.cpp  command.cpp
tests/: test_main.cpp
